--- a/_layouts/career.html
+++ b/_layouts/career.html
@@ -10,6 +10,8 @@ layout: page
 
   {%- include header.html -%}
 
+  {{ content }}
+
   {%- include footer.html -%}
   {% if site.darkmode == false %}
     <script src="{{ '/assets/js/index.js' | relative_url }}"></script>
